# rust_guitar_utils_api

./: .gitignore  Cargo.toml  Makefile  README.md  dockerfile
.github/workflows/: rust.yml
src/: main.rs
src/dto/: request.rs  response.rs
src/models/: user.rs
src/services/: chord.rs  chord_v2.rs  mod.rs
src/util/: helper.rs
tests/: http_client.rs
