[package]
name = "rust_guitar_utils_api"
description = "RESTful webservice to provide guitar utils for guitar apps & web client"
version = "1.0.0"
edition = "2024"

[dependencies]
actix-web = "4.5.1"
actix-multipart = "0.7.2"
utoipa = { version = "*" }
serde = { version = "1.0", features = ["derive"] }
scalar-doc = { version = "0.1.0", features = ["actix"] }
serde_json = "1.0"
serde_yaml = "0.9"
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
futures = "0.3.31"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
